--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <title>Frontend Mentor | Fylo data storage component</title>
 </head>
 <body>
-
+<picture>
+  <img src="/images/bg-desktop.png" alt="">
+</picture>
   <main>
     <article class="logo-wrapper">
       <div class="top-image">
@@ -31,7 +33,11 @@
     </article>
     <article class="bar">
       <h1>You’ve used <span> 815 GB</span> of your storage</h1>
-      <div class="progress-bar"></div>
+      <div class="progress-bar">
+        <div class="progress-bar-2">
+          <span class="round-bar"></span>
+        </div>
+      </div>
       <div class="paragraph-2">
         <p class="p-left">0 GB</p>
       <P class="p-right">1000 GB</P>
