--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       </div>
     </article>
     <article class="bar">
+      <div class="data-left">
+        <h2>185 <span class="span-1">GB Left</span></h2>
+      </div>
       <h1>You’ve used <span> 815 GB</span> of your storage</h1>
       <div class="progress-bar">
         <div class="progress-bar-2">
@@ -44,13 +47,6 @@
       </div>
     </article>
   </main>
-
-  
-
-  <!-- 185 GB Left -->
-  
-
-  
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
