--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <picture>
-  <img src="/images/bg-desktop.png" alt="">
+  <source media="(max-width:40em)" srcset="/images/bg-mobile.png">
+  <img src="/images/bg-desktop.png" alt="background pattern">
 </picture>
   <main>
     <article class="logo-wrapper">
@@ -49,7 +50,7 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Peter Macharia</a>.
   </footer>
 </body>
 </html>
